--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 //  RetroLambda
 apply plugin: 'me.tatarka.retrolambda'
-
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+
     // Google Play
     compile 'com.google.android.gms:play-services-maps:10.2.1'
 
@@ -36,6 +37,9 @@ dependencies {
 
     // Dependency injections
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.dagger:dagger:2.7'
+    apt 'com.google.dagger:dagger-compiler:2.7'
 
     // Network dependencies
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
